<resources>
    <string name="score">Score</string>
    <string name="question">Question</string>
    <string name="app_name">Overflow menu</string>
    <string name="action_settings">Settings</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="overflow">Overflow</string>
    <string name="name">Name</string>

    <string-array name="listArray">
        <item>This App was Created By Jeff Sumemrs a student at Coleman University</item>
    </string-array>

    <string-array name="listvalue">
        <item>1</item>
    </string-array>
</resources>
