<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="summers.colemantriva.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/cube"
        android:title="@string/action_settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_overflow"
        android:icon="@drawable/read"
        android:title="@string/overflow"
        app:showAsAction="always"
        android:orderInCategory="100">

            <menu>?
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/menu_red"
                        app:showAsAction="never"
                        android:orderInCategory="1"
                        android:title="@string/red"/>
                    <item
                        android:id="@+id/menu_green"
                        app:showAsAction="never"
                        android:orderInCategory="2"
                        android:title="@string/green"/>
                    <item
                        android:id="@+id/menu_yellow"
                        app:showAsAction="never"
                        android:orderInCategory="3"
                        android:title="@string/yellow"/>
                    <item
                        android:id="@+id/menu_blue"
                        app:showAsAction="never"
                        android:orderInCategory="4"
                        android:title="@string/blue"/>

                </group>
            </menu>

    </item>
</menu>
